# przetwarzanie_obrazow_pgm

./: 19.05_zadania.txt  CMakeLists.txt  Obrazy.files  Obrazy.includes  README.md  compilator.sh  operacje_na_obrazie  reprezentacja_obrazow  wyswietlanie_obrazków.txt  zadania  zadania.txt
src/: Binarne.cpp  Binarne.hpp  CMakeLists.txt  Cezar.cpp  Cezar.hpp  DummyData.cpp  DummyData.hpp  FileManager.cpp  FileManager.hpp  FilterRunner.cpp  FilterRunner.hpp  Filtry.cpp  Filtry.hpp  Liczby.cpp  Liczby.hpp  Maski.cpp  Maski.hpp  Obraz.cpp  Obraz.hpp  Obrazy.cpp  Obrazy.hpp  Sygnaly.cpp  Sygnaly.hpp  main.cpp  run.cpp  run.hpp
test/: CMakeLists.txt  FileManagerTests.cpp
