cmake_minimum_required(VERSION 3.8)
project(prework)
list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake")
set(CMAKE_CXX_STANDARD 14)
set(CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
add_subdirectory(src)
include(CTest)
if(BUILD_TESTING)
    include(googletest-download)
    add_subdirectory(test)
endif()
